<resources>
    <string name="app_name">SampleMerchantApp</string>
    <string name="orderid">OrderId*</string>
    <string name="insert_unique_order_id_here">Insert Unique Order Id Here</string>
    <string name="order_amount">Order Amount*</string>
    <string name="_500">500</string>
    <string name="order_note">Order Note</string>
    <string name="my_new_order">My New Order</string>
    <string name="insert_order_amount_here">Insert Order Amount Here</string>
    <string name="insert_information_about_order">Insert information about order</string>
    <string name="customer_name">Customer Name</string>
    <string name="john_doe">John Doe</string>
    <string name="customer_name_goes_here">Customer name goes here</string>
    <string name="customer_email">Customer Email*</string>
    <string name="john_doe_gmail_com">john.doe@gmail.com</string>
    <string name="customer_email_goes_here">Customer email goes here</string>
    <string name="customer_phone">Customer Phone*</string>
    <string name="customer_phone_number_goes_here">Customer phone number goes here</string>
    <string name="_9900012345">9900012345</string>
    <string name="do_payment">Do Payment</string>
</resources>
