<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_merchant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sample.samplemerchantapp.MerchantActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/lay_orderId"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/orderid"
            android:textSize="16sp"
            android:gravity="end"/>

        <EditText
            android:id="@+id/order_id"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:hint="@string/insert_unique_order_id_here"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="1"
        android:id="@+id/lay_orderAmount"
        android:layout_below="@id/lay_orderId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/order_amount"
            android:textSize="16sp"
            android:gravity="end"/>

        <EditText
            android:id="@+id/order_amount"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/_500"
            android:hint="@string/insert_order_amount_here"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="1"
        android:id="@+id/lay_orderNote"
        android:layout_below="@id/lay_orderAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/order_note"
            android:textSize="16sp"
            android:gravity="end"/>

        <EditText
            android:id="@+id/order_note"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/my_new_order"
            android:hint="@string/insert_information_about_order"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="1"
        android:id="@+id/lay_customerName"
        android:layout_below="@id/lay_orderNote"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/customer_name"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_marginBottom="10dip"/>

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/john_doe"
            android:hint="@string/customer_name_goes_here"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="1"
        android:id="@+id/lay_customerEmail"
        android:layout_below="@id/lay_customerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/customer_email"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_marginBottom="10dip"/>

        <EditText
            android:id="@+id/customer_email"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/john_doe_gmail_com"
            android:hint="@string/customer_email_goes_here"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="1"
        android:id="@+id/lay_customerPhone"
        android:layout_below="@id/lay_customerEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/customer_phone"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_marginBottom="10dip"/>

        <EditText
            android:id="@+id/customer_phone"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/_9900012345"
            android:hint="@string/customer_phone_number_goes_here"
            android:inputType="phone"
            android:textSize="16sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="1"
        android:layout_below="@id/lay_customerPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_transaction"
            android:text="@string/do_payment"
            android:onClick="initPayment"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dip"/>
    </LinearLayout>
</RelativeLayout>
